manifests/frontend/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-local
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 8000
    nodePort: 32000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-http
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "spooky-ip"
spec:
  backend:
    serviceName: frontend-local
    servicePort: 8000
